--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(CodeInspector VERSION 1.0.0)
 
+set(CMAKE_EXPORT_COMPILECOMMANDS ON)
+
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
     set(BUILD_TYPE Debug)
     add_compile_definitions(LOGS_ENABLED)
