--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -14,6 +14,7 @@ env:
   WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/irc_nas/18857/w_HPCKit_p_2022.3.0.9564_offline.exe
   WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
   WINDOWS_DPCPP_COMPONENTS: intel.oneapi.win.dpcpp-compiler
+  COMPILER_VERSION: 2022.2
       
       
 jobs:
@@ -205,7 +206,11 @@ jobs:
           git clone --depth=1 https://github.com/oneapi-src/oneapi-ci.git oneapi-ci
           cd oneapi-ci
           scripts/install_windows.bat ${{ env.WINDOWS_HPCKIT_URL }} ${{ env.WINDOWS_CPP_COMPONENTS }}
-
+          
+      - name: restore registry on cache hit
+        if: steps.cache-install.outputs.cache-hit == 'true'
+        run: scripts/restore_registry.bat $COMPILER_VERSION
+        
       - uses: msys2/setup-msys2@v2
         with:
           update: true
