--- a/.github/workflows/desktop-qt.yml
+++ b/.github/workflows/desktop-qt.yml
@@ -270,6 +270,8 @@ jobs:
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
             toolchains: gcc
+            c: gcc
+            cxx: g++
             mkspec: win32-g++
             qt_build: qt5
             qmake: qmake.exe
@@ -278,30 +280,48 @@ jobs:
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
             toolchains: gcc
+            c: gcc
+            cxx: g++
             mkspec: win32-g++
             qt_build: qt5-static
             qmake: /mingw64/qt5-static/bin/qmake.exe
             windeployqt: ls.exe
           - qt_arch: mingw64_qt5-clang
-            mingw_arch: MINGW64 
-            mingw_prefix: mingw-w64-x86_64
+            mingw_arch: CLANG64 
+            mingw_prefix: mingw-w64-clang-x86_64
             toolchains: clang
+            c: clang
+            cxx: clang++
             mkspec: win32-clang-g++
             qt_build: qt5
             qmake: qmake.exe
             windeployqt: windeployqt.exe
+          - qt_arch: mingw64_qt5-static-clang
+            mingw_arch: CLANG64 
+            mingw_prefix: mingw-w64-clang-x86_64
+            toolchains: clang
+            c: clang
+            cxx: clang++
+            mkspec: win32-clang-g++
+            qt_build: qt5-static
+            qmake: /clang64/qt5-static/bin/qmake.exe
+            windeployqt: ls.exe
           - qt_arch: mingw64_qt6-gcc
             mingw_arch: MINGW64 
             mingw_prefix: mingw-w64-x86_64
             toolchains: gcc
+            c: gcc
+            cxx: g++
             mkspec: win32-g++
             qt_build: qt6
             qmake: qmake6.exe
             windeployqt: windeployqt.exe
           - qt_arch: mingw64_qt6-clang
-            mingw_arch: MINGW64 
-            mingw_prefix: mingw-w64-x86_64
+            mingw_arch: CLANG64 
+            mingw_prefix: mingw-w64-clang-x86_64
             toolchains: clang
+            c: clang
+            cxx: clang++
             mkspec: win32-clang-g++
             qt_build: qt6
             qmake: qmake6.exe
@@ -314,7 +334,7 @@ jobs:
         with:
           update: true
           msystem: ${{ matrix.mingw_arch }}
-          install:  ${{ matrix.mingw_prefix }}-${{ matrix.toolchains }} ${{ matrix.mingw_prefix }}-make ${{ matrix.mingw_prefix }}-${{ matrix.qt_build }} ${{ matrix.mingw_prefix }}-openssl ${{ matrix.mingw_prefix }}-zstd ${{ matrix.mingw_prefix }}-libb2 ${{ matrix.mingw_prefix }}-jasper
+          install:  ${{ matrix.mingw_prefix }}-cmake ${{ matrix.mingw_prefix }}-ninja ${{ matrix.mingw_prefix }}-${{ matrix.toolchains }} ${{ matrix.mingw_prefix }}-make ${{ matrix.mingw_prefix }}-${{ matrix.qt_build }} ${{ matrix.mingw_prefix }}-openssl ${{ matrix.mingw_prefix }}-zstd ${{ matrix.mingw_prefix }}-libb2 ${{ matrix.mingw_prefix }}-jasper
 
       - uses: actions/checkout@v2
         with:
@@ -340,19 +360,15 @@ jobs:
           python WidgetGen.py
           cd ..\..\..\..
 
-      - name: qmake
+      - name: build
         shell: msys2 {0}
         run: |
           mkdir build
           cd build
-          ${{ matrix.qmake }} -r -spec ${{ matrix.mkspec }} CONFIG+=release CONFIG+=qtquickcompiler ..
-          cd ..
-
-      - name: mingw32-make
-        shell: msys2 {0}
-        run: |
-          cd build
-          mingw32-make.exe -j $NUMBER_OF_PROCESSORS
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja ..
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin ninja
+          ls -l
+          ls -l desktop-qt
           cd ..
 
       - name: extract executable
@@ -391,6 +407,7 @@ jobs:
           git apply ../scintillua.patch
           cd ../zlib
           git apply ../zlib.patch
+          git apply ../zlib-macos.patch
           cd ../..
       
       - name: build macos
@@ -400,8 +417,8 @@ jobs:
           cd ../../../..
           mkdir build
           cd build
-          qmake -r CONFIG+=release CONFIG+=qtquickcompiler ../${{ env.targetName }}.pro
-          make -j `sysctl -n hw.logicalcpu`
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ..
+          ninja
           cd ..
           
       - name: package
